<resources>
    <string name="app_name">UniKey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_doubts">Ask Doubts</string>
    <string name="job_alerts">Job Alerts</string>
    <string name="result">Result</string>
    <string name="time_table">Time table</string>
    <string name="events">Events</string>
    <string name="certificate_courses">Certificate courses</string>
    <string name="materials">Materials</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="calender">Calender</string>
    <string name="fees_due">Fees Due</string>
    <string name="attendance">Attendance</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="login_greeting">Welcome</string>
    <string name="register">Register</string>
    <string name="not_registered">You are not a registered User. So you cannot access this app. <b> Thank you</b></string>
    <string name="email_sent_msg">Check your email to reset your password.</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="previous"><![CDATA[<—]]></string>
    <string name="next"><![CDATA[—>]]></string>
    <string name="reg_no">Reg.no</string>
    <string name="add_study_materials">Add study materials</string>

    <string name="chapter_name_chars">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_1234567890</string>

    <string name="stud_reg_no">Reg.No : %1$s</string>
    <string name="stud_name">Name   : %1$s</string>
    <string name="sem_head">SEM    : %1$s</string>



    <!--  Transition names -->
    <string name="attendance_card_transition_name">attendance_card_transition</string>
    <string name="attendance_detail_transition_name">attendance_detail_transition</string>

    <string name="fees_card_transition_name">fees_card_transition</string>
    <string name="fees_detail_transition_name">fees_detail_transition</string>


</resources>