<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="70dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/attendance_card_view"
            style="@style/Widget.UniKey.HomeContent.CardView"
            app:layout_constraintEnd_toStartOf="@+id/fees_card_view"
            app:layout_constraintHorizontal_bias="0.5"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/attendance_card_transition_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginVertical="8dp"
                    android:src="@drawable/icon_attendance" />

                <TextView
                    android:id="@+id/attendance_percent_txt_view"
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="80.39%"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fees_card_view"
            style="@style/Widget.UniKey.HomeContent.CardView"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attendance_card_view"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/fees_card_transition_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginVertical="8dp"
                    android:src="@drawable/icon_fees_due" />

                <TextView
                    android:id="@+id/fees_amount_txt_view"
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="₹6400"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fees_due" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attendance_card_view">

            <LinearLayout android:id="@+id/calender"
                style="@style/Widget.UniKey.HomeContent.Item"
                android:focusable="true"
                android:clickable="true">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/icon_calender" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:layout_marginStart="@dimen/home_item_text_5dp_margin"
                    android:text="@string/calender" />
            </LinearLayout>

            <LinearLayout android:id="@+id/gallery"
                style="@style/Widget.UniKey.HomeContent.Item">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/icon_gallery" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:text="@string/gallery" />
            </LinearLayout>

            <LinearLayout android:id="@+id/job_alerts"
                style="@style/Widget.UniKey.HomeContent.Item">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/icon_job_placement" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:text="@string/job_alerts" />
            </LinearLayout>

<!--            <LinearLayout style="@style/Widget.UniKey.HomeContent.Item">-->

<!--                <ImageView-->
<!--                    style="@style/Widget.UniKey.ImageView"-->
<!--                    android:src="@drawable/icon_ask_questions" />-->

<!--                <TextView-->
<!--                    style="@style/Widget.UniKey.HCI.TextView"-->
<!--                    android:text="@string/ask_doubts" />-->
<!--            </LinearLayout>-->



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@id/fees_card_view">

            <LinearLayout android:id="@+id/materials" style="@style/Widget.UniKey.HomeContent.Item">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/icon_book_materials" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:text="@string/materials" />
            </LinearLayout>

            <LinearLayout android:id="@+id/courses" style="@style/Widget.UniKey.HomeContent.Item">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/courses" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:text="@string/certificate_courses" />
            </LinearLayout>

            <LinearLayout android:id="@+id/about"
                style="@style/Widget.UniKey.HomeContent.Item">

                <ImageView
                    style="@style/Widget.UniKey.ImageView"
                    android:src="@drawable/icon_about" />

                <TextView
                    style="@style/Widget.UniKey.HCI.TextView"
                    android:text="@string/about"
                    android:layout_marginStart="@dimen/home_item_text_5dp_margin"/>
            </LinearLayout>

<!--            <LinearLayout style="@style/Widget.UniKey.HomeContent.Item">-->

<!--                <ImageView-->
<!--                    style="@style/Widget.UniKey.ImageView"-->
<!--                    android:src="@drawable/icon_events" />-->

<!--                <TextView-->
<!--                    style="@style/Widget.UniKey.HCI.TextView"-->
<!--                    android:text="@string/events"-->
<!--                    android:layout_marginStart="@dimen/home_item_text_5dp_margin"/>-->
<!--            </LinearLayout>-->

<!--            <LinearLayout android:id="@+id/time_table" style="@style/Widget.UniKey.HomeContent.Item">-->

<!--                <ImageView-->
<!--                    style="@style/Widget.UniKey.ImageView"-->
<!--                    android:src="@drawable/icon_exam_time_table" />-->

<!--                <TextView-->
<!--                    style="@style/Widget.UniKey.HCI.TextView"-->
<!--                    android:text="@string/time_table" />-->
<!--            </LinearLayout>-->

<!--            <LinearLayout android:id="@+id/results" style="@style/Widget.UniKey.HomeContent.Item">-->

<!--                <ImageView-->
<!--                    style="@style/Widget.UniKey.ImageView"-->
<!--                    android:src="@drawable/icon_result" />-->

<!--                <TextView-->
<!--                    style="@style/Widget.UniKey.HCI.TextView"-->
<!--                    android:text="@string/result"-->
<!--                    android:layout_marginStart="@dimen/home_item_text_5dp_margin"/>-->
<!--            </LinearLayout>-->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
