<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.loginscreen.LoginScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_greeting"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:textStyle="bold"
            android:textColor="@color/md_theme_light_secondaryContainer"
            android:layout_margin="6dp"/>

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in to continue..."
            style="@style/TextAppearance.Material3.BodyMedium"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/md_theme_light_secondaryContainer"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/login_card_bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="5dp">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackCornerRadius="8dp"
            app:trackThickness="5dp"
            app:trackColor="@color/transparent"
            android:layout_marginHorizontal="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/md_theme_dark_error"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="35dp"
        android:layout_marginTop="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.UniKey.TextInputLayout.OutlinedBox"
            android:hint="@string/e_mail"
            app:placeholderText="Enter your Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_no_input_layout"
            style="@style/Widget.UniKey.TextInputLayout.OutlinedBox"
            android:hint="@string/reg_no"
            app:placeholderText="Enter your Reg.no"
            app:endIconDrawable="@drawable/ic_add_circle_outline_24"
            app:endIconMode="custom"
            app:helperTextTextColor="@color/md_theme_dark_errorContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/reg_no_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.UniKey.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:placeholderText="Enter your password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:text="Sign in"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/forget_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                style="@style/Widget.Material3.Button.TextButton" />
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="20dp"/>
            <Button
                android:id="@+id/signUp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/Widget.Material3.Button.TextButton"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>